RESOLVED FIXED266899
REGRESSION(272410@main): triggered ASSERTs on Debug bots
https://bugs.webkit.org/show_bug.cgi?id=266899
Summary REGRESSION(272410@main): triggered ASSERTs on Debug bots
WebKit Commit Bot
Reported 2023-12-26 12:09:48 PST
https://commits.webkit.org/272410@main introduced a regression: triggered ASSERTs on Debug bots This is an automatic bug report generated by webkitbot. If this bug report was created because of a flaky test, please file a bug for the flaky test (if we don't already have one on file) and dup this bug against that bug so that we can track how often these flaky tests fail.
Attachments
REVERT of 272410@main (2.31 KB, patch)
2023-12-26 12:09 PST, WebKit Commit Bot
no flags
WebKit Commit Bot
Comment 1 2023-12-26 12:09:54 PST
Created attachment 469212 [details] REVERT of 272410@main Any committer can land this patch automatically by marking it commit-queue+. The commit-queue will build and test the patch before landing to ensure that the revert will be successful. This process takes approximately 15 minutes. If you would like to land the revert faster, you can use the following command: webkit-patch land-attachment ATTACHMENT_ID where ATTACHMENT_ID is the ID of this attachment.
EWS
Comment 2 2023-12-26 12:14:44 PST
Committed 272502@main (6248d02aae44): <https://commits.webkit.org/272502@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 469212 [details].
Radar WebKit Bug Importer
Comment 3 2023-12-26 12:15:14 PST
Note You need to log in before you can comment on or make changes to this bug.