Cherry-pick 6248d02aae44. rdar://120177542

Unreviewed, reverting 272410@main.
    https://bugs.webkit.org/show_bug.cgi?id=266899

    triggered ASSERTs on Debug bots

    Reverted changeset:

    "[GStreamer] Fix delayed dispatch of async task post MediaPlayer destruction"
    https://bugs.webkit.org/show_bug.cgi?id=266715
    https://commits.webkit.org/272410@main

    Canonical link: https://commits.webkit.org/272502@main